<resources>
    <string name="app_name">Aavartan2k19</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom_nav">bottomNav</string>
    <string name="title_profile">Profile</string>
    <string name="title_event">Event</string>
    <string name="title_attraction">Attractions</string>
    <string name="title_tshirt">T-shirt</string>
    <string name="title_face">Face of Aavartan</string>
    <string name="title_activity_details_technical">details_technical</string>
</resources>
