<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/title_event" />

    <item
        android:id="@+id/navigation_attraction"
        android:icon="@drawable/ic_brightness_high_black_24dp"
        android:title="@string/title_attraction" />
    <item
        android:id="@+id/navigation_face"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/title_face" />

    <item
        android:id="@+id/navigation_tshirt"
        android:icon="@drawable/tshirt"
        android:title="@string/title_tshirt" />

</menu>
